# gst-plugin-timing

./: ChangeLog  README  configure.ac
src/: Makefile.am  gstthroughput.c  gstthroughput.h  gsttiming.c
tools/: inspect-throughput.sh  list-plugins.sh  test-throughput-audio.sh  test-throughput-video.sh  test-throughput.sh
