plugin_LTLIBRARIES = libgsttiming.la

# sources used to compile this plug-in
libgsttiming_la_SOURCES = gsttiming.c gstthroughput.c gstthroughput.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgsttiming_la_CFLAGS = $(GST_CFLAGS)
libgsttiming_la_LIBADD = $(GST_LIBS)
libgsttiming_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgsttiming_la_LIBTOOLFLAGS = --tag=disable-static
